[tool.poetry]
name = "hw20"
version = "0.1.0"
description = ""
authors = ["AndriyBatig1992 <starickova.tan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"
faker = "^19.12.0"
pika = "^1.3.2"
mongoengine = "^0.27.0"
prompt-toolkit = "^3.0.39"
redis = "^5.0.1"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
